Update testcases